fix: Fix streamer nav list overflow x.

--- a/client/style/index.css
+++ b/client/style/index.css
@@ -40,6 +40,7 @@ body {
     height: 100vh;
     position: fixed;
     overflow-y: scroll;
+    overflow-x: hidden;
     font-size: 1vw;
 }
 
